overflow fix attempt 2

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
   height: 100%;
   width: 100%;
   background-color: black;
+  overflow-x: hidden !important;
+  position: relative;
 }
 
 p {
